# app/Http/Controllers/Api/PaymentController.php
@@ -13,6 +13,11 @@ use App\Services\ProfileNumberService;
 use App\Http\Resources\ProfileResource;
 use App\Http\Controllers\Api\BaseController;
 
+     /**
+      * @group Payment Management
+      *  `
+      */
+
 class PaymentController extends BaseController
 {
      /**
@@ -57,19 +62,21 @@ class PaymentController extends BaseController
             // $transaction->insertDeposite($parentId, 100);
 
             //$transaction = Transaction::find($parentProfile1->transaction->id);
-            if($parentProfile1->transaction){
-              $parentProfile1->transaction->deposite += 100;
-              $parentProfile1->transaction->transaction_date = date("Y-m-d");
-              $parentProfile1->transaction->save();
-            }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile1->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile1->id);
+            // if($parentProfile1->transaction){
+            //   $parentProfile1->transaction->deposite += 100;
+            //   $parentProfile1->transaction->transaction_date = date("Y-m-d");
+            //   $parentProfile1->transaction->save();
+            // }
+           // else{
+            
+                // $newTransaction = new Transaction();
+                // $newTransaction->profile_id = $parentProfile1->id;
+                // $newTransaction->deposite = 100;
+                // $newTransaction->transaction_date = date("Y-m-d");
+                // $newTransaction->save();
+          //  }
+             Profile::updateWalletBalance($parentProfile1->id);
+            
             $parentId = $parentProfile1->parent_id;
         }
 
@@ -77,20 +84,22 @@ class PaymentController extends BaseController
             $parentProfile2 = Profile::find($parentId);
             $parentProfile2->level_2 = $parentProfile2->level_2 + 1;
             $parentProfile2->save();
+            
+            Transaction::insertDeposit($parentId, 100);
 
-            if($parentProfile2->transaction){
-                $parentProfile2->transaction->deposite += 100;
-                $parentProfile2->transaction->transaction_date = date("Y-m-d");
-                $parentProfile2->transaction->save();
-              }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile2->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile2->id);
+            // if($parentProfile2->transaction){
+            //     $parentProfile2->transaction->deposite += 100;
+            //     $parentProfile2->transaction->transaction_date = date("Y-m-d");
+            //     $parentProfile2->transaction->save();
+            //   }
+            // else{
+            //     $newTransaction = new Transaction();
+            //     $newTransaction->profile_id = $parentProfile2->id;
+            //     $newTransaction->deposite = 100;
+            //     $newTransaction->transaction_date = date("Y-m-d");
+            //     $newTransaction->save();
+            // }
+            Profile::updateWalletBalance($parentProfile2->id);
             $parentId = $parentProfile2->parent_id;
         }
 
@@ -99,19 +108,22 @@ class PaymentController extends BaseController
             $parentProfile3->level_3 = $parentProfile3->level_3 + 1;
             $parentProfile3->save();
 
-            if($parentProfile3->transaction){
-                $parentProfile3->transaction->deposite += 100;
-                $parentProfile3->transaction->transaction_date = date("Y-m-d");
-                $parentProfile3->transaction->save();
-              }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile3->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile3->id);
+
+            Transaction::insertDeposit($parentId, 100);
+
+            // if($parentProfile3->transaction){
+            //     $parentProfile3->transaction->deposite += 100;
+            //     $parentProfile3->transaction->transaction_date = date("Y-m-d");
+            //     $parentProfile3->transaction->save();
+            //   }
+            // else{
+            //     $newTransaction = new Transaction();
+            //     $newTransaction->profile_id = $parentProfile3->id;
+            //     $newTransaction->deposite = 100;
+            //     $newTransaction->transaction_date = date("Y-m-d");
+            //     $newTransaction->save();
+            // }
+            Profile::updateWalletBalance($parentProfile3->id);
             $parentId = $parentProfile3->parent_id;
         }
 
@@ -120,19 +132,21 @@ class PaymentController extends BaseController
             $parentProfile4->level_4 = $parentProfile4->level_4 + 1;
             $parentProfile4->save();
 
-            if($parentProfile4->transaction){
-                $parentProfile4->transaction->deposite += 100;
-                $parentProfile4->transaction->transaction_date = date("Y-m-d");
-                $parentProfile4->transaction->save();
-              }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile4->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile4->id);
+            Transaction::insertDeposit($parentId, 100);
+
+            // if($parentProfile4->transaction){
+            //     $parentProfile4->transaction->deposite += 100;
+            //     $parentProfile4->transaction->transaction_date = date("Y-m-d");
+            //     $parentProfile4->transaction->save();
+            //   }
+            // else{
+            //     $newTransaction = new Transaction();
+            //     $newTransaction->profile_id = $parentProfile4->id;
+            //     $newTransaction->deposite = 100;
+            //     $newTransaction->transaction_date = date("Y-m-d");
+            //     $newTransaction->save();
+            // }
+            Profile::updateWalletBalance($parentProfile4->id);
             $parentId = $parentProfile4->parent_id;
         }
 
@@ -141,19 +155,21 @@ class PaymentController extends BaseController
             $parentProfile5->level_5 = $parentProfile5->level_5 + 1;
             $parentProfile5->save();
 
-            if($parentProfile5->transaction){
-                $parentProfile5->transaction->deposite += 100;
-                $parentProfile5->transaction->transaction_date = date("Y-m-d");
-                $parentProfile5->transaction->save();
-              }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile5->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile5->id);
+            Transaction::insertDeposit($parentId, 100);
+
+            // if($parentProfile5->transaction){
+            //     $parentProfile5->transaction->deposite += 100;
+            //     $parentProfile5->transaction->transaction_date = date("Y-m-d");
+            //     $parentProfile5->transaction->save();
+            //   }
+            // else{
+            //     $newTransaction = new Transaction();
+            //     $newTransaction->profile_id = $parentProfile5->id;
+            //     $newTransaction->deposite = 100;
+            //     $newTransaction->transaction_date = date("Y-m-d");
+            //     $newTransaction->save();
+            // }
+            Profile::updateWalletBalance($parentProfile5->id);
             $parentId = $parentProfile5->parent_id;
         }
 
@@ -162,19 +178,21 @@ class PaymentController extends BaseController
             $parentProfile6->level_6 = $parentProfile6->level_6 + 1;
             $parentProfile6->save();
 
-            if($parentProfile6->transaction){
-                $parentProfile6->transaction->deposite += 100;
-                $parentProfile6->transaction->transaction_date = date("Y-m-d");
-                $parentProfile6->transaction->save();
-              }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile6->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile6->id);
+            Transaction::insertDeposit($parentId, 100);
+
+            // if($parentProfile6->transaction){
+            //     $parentProfile6->transaction->deposite += 100;
+            //     $parentProfile6->transaction->transaction_date = date("Y-m-d");
+            //     $parentProfile6->transaction->save();
+            //   }
+            // else{
+            //     $newTransaction = new Transaction();
+            //     $newTransaction->profile_id = $parentProfile6->id;
+            //     $newTransaction->deposite = 100;
+            //     $newTransaction->transaction_date = date("Y-m-d");
+            //     $newTransaction->save();
+            // }
+            Profile::updateWalletBalance($parentProfile6->id);
             $parentId = $parentProfile6->parent_id;
         }
 
@@ -183,19 +201,21 @@ class PaymentController extends BaseController
             $parentProfile7->level_7 = $parentProfile7->level_7 + 1;
             $parentProfile7->save();
 
-            if($parentProfile7->transaction){
-                $parentProfile7->transaction->deposite += 100;
-                $parentProfile7->transaction->transaction_date = date("Y-m-d");
-                $parentProfile7->transaction->save();
-              }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile7->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile7->id);
+            Transaction::insertDeposit($parentId, 100);
+
+            // if($parentProfile7->transaction){
+            //     $parentProfile7->transaction->deposite += 100;
+            //     $parentProfile7->transaction->transaction_date = date("Y-m-d");
+            //     $parentProfile7->transaction->save();
+            //   }
+            // else{
+            //     $newTransaction = new Transaction();
+            //     $newTransaction->profile_id = $parentProfile7->id;
+            //     $newTransaction->deposite = 100;
+            //     $newTransaction->transaction_date = date("Y-m-d");
+            //     $newTransaction->save();
+            // }
+            Profile::updateWalletBalance($parentProfile7->id);
             $parentId = $parentProfile7->parent_id;
         }
 
@@ -204,19 +224,21 @@ class PaymentController extends BaseController
             $parentProfile8->level_8 = $parentProfile8->level_8 + 1;
             $parentProfile8->save();
 
-            if($parentProfile8->transaction){
-                $parentProfile8->transaction->deposite += 100;
-                $parentProfile8->transaction->transaction_date = date("Y-m-d");
-                $parentProfile8->transaction->save();
-              }
-            else{
-                $newTransaction = new Transaction();
-                $newTransaction->profile_id = $parentProfile8->id;
-                $newTransaction->deposite = 100;
-                $newTransaction->transaction_date = date("Y-m-d");
-                $newTransaction->save();
-            }
-            $this->updateWalletBalance($parentProfile8->id);
+            Transaction::insertDeposit($parentId, 100);
+
+            // if($parentProfile8->transaction){
+            //     $parentProfile8->transaction->deposite += 100;
+            //     $parentProfile8->transaction->transaction_date = date("Y-m-d");
+            //     $parentProfile8->transaction->save();
+            //   }
+            // else{
+            //     $newTransaction = new Transaction();
+            //     $newTransaction->profile_id = $parentProfile8->id;
+            //     $newTransaction->deposite = 100;
+            //     $newTransaction->transaction_date = date("Y-m-d");
+            //     $newTransaction->save();
+            // }
+            Profile::updateWalletBalance($parentProfile8->id);
         }
 
         /**
@@ -231,25 +253,25 @@ class PaymentController extends BaseController
         return $this->sendResponse(['profile'=>new ProfileResource($profile)], 'Profile retrieved successfully.');
     }
 
-    public function updateWalletBalance(string $profile_id)
-   {
-        // select (sum(deposites) - sum(withdrawls)) as balance where profile_id = $profile_id
-        // update wallet_balance in profiles table
-        $profile = Profile::find($profile_id);
+//     public function updateWalletBalance(string $profile_id)
+//    {
+//         // select (sum(deposites) - sum(withdrawls)) as balance where profile_id = $profile_id
+//         // update wallet_balance in profiles table
+//         $profile = Profile::find($profile_id);
 
-        if (!$profile) {
-         return $this->sendError('Profile not found.', ['error'=>'Profile not found']);
-        }
+//         if (!$profile) {
+//          return $this->sendError('Profile not found.', ['error'=>'Profile not found']);
+//         }
 
-        $balance = Transaction::where('profile_id', $profile_id)
-            ->sum('deposite') - Transaction::where('profile_id', $profile_id)
-            ->sum('withdrawal');
+//         $balance = Transaction::where('profile_id', $profile_id)
+//             ->sum('deposite') - Transaction::where('profile_id', $profile_id)
+//             ->sum('withdrawal');
 
-         $profile->wallet_balance = $balance;
-         $profile->save();
+//          $profile->wallet_balance = $balance;
+//          $profile->save();
 
-         return $this->sendResponse(['profile'=>new ProfileResource($profile)], 'Wallet Balanace updated.');
+//          return $this->sendResponse(['profile'=>new ProfileResource($profile)], 'Wallet Balanace updated.');
 
-   }
+//    }
 
 }
