# app/Models/Profile.php
@@ -15,5 +15,25 @@ class Profile extends Model
       return $this->hasOne(Transaction::class, 'profile_id');
   }
 
+  public static function updateWalletBalance(string $profile_id)
+  {
+       // select (sum(deposites) - sum(withdrawls)) as balance where profile_id = $profile_id
+       // update wallet_balance in profiles table
+       $profile = Profile::find($profile_id);
+
+       if (!$profile) {
+        return $this->sendError('Profile not found.', ['error'=>'Profile not found']);
+       }
+
+       $balance = Transaction::where('profile_id', $profile_id)
+           ->sum('deposite') - Transaction::where('profile_id', $profile_id)
+           ->sum('withdrawal');
+
+        $profile->wallet_balance = $balance;
+        $profile->save();
+
+       // return $this->sendResponse(['profile'=>new ProfileResource($profile)], 'Wallet Balanace updated.');
+
+  }
   
 }
